[ADD][FE] Add do quiz, block tab,  view video and update progress
